features/2024.2 - update with new 2.0 template (#24)
* update 2024.2 eap